Revision history for C and Perl extension of nfdump.

1.20 2016-03-xx
	-removed several warnings 
	-nfdumpp: removed bug where nfdumpp produces corupted output file 

1.19 2016-02-03
	-perl: removed dependency on lbz 

1.18 2016-01-29
	-perl: new variables $flow->{NUM_OF_FIELDS} and $flow->{NAME} can be accesed 
	       Zangerl, Report #110170)
	-c: adjusted to nfdump-1.6.14
	-c: two new lnf_open flags LNF_COMP_LZO and LNF_COMP_BZ2
	-c: two new info options LNF_INFO_LZO_COMPRESSED and LNF_INFO_BZ2_COMPRESSED
	-c: new ./configure option to build with static or dynam BZ2 support
	-c: separation of new filter code. The new filter can also be used in 
		other projects (include/ffliter.h and src/ffiltler,
		thank to Lukas Hutak for cooperation). 
	-c: removed memory leak in lnf_lookup_map and lnf_close (tnaks for Lukas
	    Hutak)
	-c: fixed size of some fields (patch submitted by Lukas Hutak)
	-c: API change - tha value of LNF_AGGR_KEY is 0x0008
	-c: API change - new LNF_AGGR_AUTO for autodetection of aggregation mode
	-nfdumpp: new -w and -o options 
	-nfdumpp: new modular output system 
	-nfdumpp: invalid dispaly of duration field 
	-nfdumpp: multiple outputs when multiple -A switch is used 
	          Examples: 
	           nfdumpp -R DIR -A proto -O bytes -A srcvlan -O bps
	           nfdumpp -R DIR -A ip -O pkts -A port -O bytes -A proto 
	           nfdumpp -R DIR -A ip/16 -O bytes -A ip/24 
	
1.17 2015-10-27
	-perl: added test t/09-instances.t
	-perl: test for calculated items in test t/08-aggreg-sort.t
	-perl: new option CompatMode
	-c: time fields can be user as aggregation key with alligned time
	-c: new lnf_mem option LNF_OPT_COMP_STATSCMP 
	-c: sort support for calculated fields
	-c: removed bug when thread key was nor released after lnf_mem release
	-c: LNF_CALC_*PS items returns LNF_ERR_NAN when division by 0 is detected 
	-c: new flag LNF_APPEND in lnf_open for open file in append mode (not supported by nfdump format)